# app/api/v1/contact/retrive/route.ts
@@ -3,7 +3,6 @@ import { db } from "@/lib/db";
 import { validateDateRange, verifyToken } from "@/lib/utils";
 import moment from "moment-timezone";
 
-// GET: Retrieve contacts with filtering and sorting capabilities
 export const POST = async (req: NextRequest) => {
   try {
     const decoded = await verifyToken(req);
@@ -15,11 +14,6 @@ export const POST = async (req: NextRequest) => {
     const startDate = searchParams.get("startDate");
     const endDate = searchParams.get("endDate");
     const timezone = searchParams.get("timezone") || body?.timezone || "UTC"; // Default to UTC if not provided
-    const name = searchParams.get("name");
-    const email = searchParams.get("email");
-    const filterTimezone = searchParams.get("filterTimezone");
-    const sortBy = searchParams.get("sortBy") || "createdAt"; // Default sort by `createdAt`
-    const order = searchParams.get("order") || "asc"; // Default sort order: ascending
 
     // Validate the date range
     let start, end;
@@ -32,7 +26,6 @@ export const POST = async (req: NextRequest) => {
       }
     }
 
-    // Build the filter criteria for the Prisma query
     const filterCriteria: any = {
       userId: decoded.id, // Assuming each user retrieves their own contacts
       deleted: false, // Fetch only non-deleted contacts
@@ -41,24 +34,6 @@ export const POST = async (req: NextRequest) => {
     const utcDate = moment.utc(dat);
     const userTimezone = "Asia/Kolkata";
     const zonedDate = utcDate.tz(timezone).format();
-
-    // if (name) {
-    //   filterCriteria.name = {
-    //     contains: name, // Filter by name (partial match)
-    //     mode: "insensitive", // Case-insensitive match
-    //   };
-    // }
-
-    // if (email) {
-    //   filterCriteria.email = {
-    //     contains: email, // Filter by email (partial match)
-    //     mode: "insensitive", // Case-insensitive match
-    //   };
-    // }
-
-    // if (filterTimezone) {
-    //   filterCriteria.timezone = filterTimezone; // Exact match for timezone
-    // }
 
     if (start && end) {
       filterCriteria.createdAt = {
@@ -70,9 +45,6 @@ export const POST = async (req: NextRequest) => {
     // Perform the database query with filtering and sorting
     const contacts = await db.contact.findMany({
       where: filterCriteria,
-      orderBy: {
-        [sortBy]: order === "asc" ? "asc" : "desc", // Sorting by the specified field and order
-      },
     });
 
     // Convert timestamps to the specified timezone
